SONAR-19558 Refactor 'issues', 'issue_changes', Components and view indexes